--- a/riptide_autonomy/package.xml
+++ b/riptide_autonomy/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package>
   <name>riptide_autonomy</name>
   <version>0.0.0</version>
   <description>The riptide_autonomy package</description>
@@ -53,15 +53,6 @@
   <build_depend>rospy</build_depend>
   <build_depend>smach</build_depend>
   <build_depend>smach_ros</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>smach</build_export_depend>
-  <build_export_depend>smach_ros</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>smach</exec_depend>
-  <exec_depend>smach_ros</exec_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
