--- a/riptide_autonomy/cfg/task_map_semis.yaml
+++ b/riptide_autonomy/cfg/task_map_semis.yaml
@@ -3,7 +3,7 @@ task_map: [
       id: 0,
       quad: "A",
       freq: 30,
-      locations: [
+      map: [
         {
           id: 0,
           name: "Casino_Gate",
@@ -30,22 +30,6 @@ task_map: [
         },
         {
           id: 3,
-          name: "Path_Marke2",
-          start_x: 0,
-          start_y: 0,
-          end_x: 0,
-          end_y: 0
-        },
-        {
-          id: 4,
-          name: "Slots",
-          start_x: 0,
-          start_y: 0,
-          end_x: 0,
-          end_y: 0
-        },
-        {
-          id: 5,
           name: "Buy_Gold_Chip1",
           start_x: 0,
           start_y: 0,
@@ -53,8 +37,24 @@ task_map: [
           end_y: 0
         },
         {
+          id: 4,
+          name: "Path_Marker2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 5,
+          name: "Slots",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
           id: 6,
-          name: "Roulette",
+          name: "Buy_Gold_Chip2",
           start_x: 0,
           start_y: 0,
           end_x: 0,
@@ -62,6 +62,251 @@ task_map: [
         },
         {
           id: 7,
+          name: "Roulette",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 8,
+          name: "Cash_In",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        }
+      ]
+    },
+    {
+      id: 1,
+      quad: "B",
+      freq: 40,
+      map: [
+        {
+          id: 0,
+          name: "Casino_Gate",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 1,
+          name: "Path_Marker1",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 2,
+          name: "Dice",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 3,
+          name: "Buy_Gold_Chip1",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 4,
+          name: "Path_Marker2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 5,
+          name: "Slots",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 6,
+          name: "Buy_Gold_Chip2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 7,
+          name: "Roulette",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 8,
+          name: "Cash_In",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        }
+      ]
+    },
+    {
+      id: 2,
+      quad: "C",
+      freq: 25,
+      map: [
+        {
+          id: 0,
+          name: "Casino_Gate",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 1,
+          name: "Path_Marker1",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 2,
+          name: "Dice",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 3,
+          name: "Buy_Gold_Chip1",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 4,
+          name: "Path_Marker2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 5,
+          name: "Slots",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 6,
+          name: "Buy_Gold_Chip2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 7,
+          name: "Roulette",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 8,
+          name: "Cash_In",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        }
+      ]
+    },
+    {
+      id: 3,
+      quad: "D",
+      freq: 35,
+      map: [
+        {
+          id: 0,
+          name: "Casino_Gate",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 1,
+          name: "Path_Marker1",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 2,
+          name: "Dice",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 3,
+          name: "Buy_Gold_Chip1",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 4,
+          name: "Path_Marker2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 5,
+          name: "Slots",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 6,
+          name: "Buy_Gold_Chip2",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 7,
+          name: "Roulette",
+          start_x: 0,
+          start_y: 0,
+          end_x: 0,
+          end_y: 0
+        },
+        {
+          id: 8,
           name: "Cash_In",
           start_x: 0,
           start_y: 0,
