--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -37,6 +37,7 @@ add_message_files(
     ThrusterResiduals.msg
     TaskInfo.msg
     Object.msg
+    MissionState.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs darknet_ros_msgs)
