--- a/riptide_autonomy/package.xml
+++ b/riptide_autonomy/package.xml
@@ -54,9 +54,15 @@
   <build_depend>roslint</build_depend>
   <build_depend>riptide_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>OpenCV</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>riptide_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
+  <run_depend>OpenCV</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
