Get roulette heading code

--- a/riptide_autonomy/CMakeLists.txt
+++ b/riptide_autonomy/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(riptide_autonomy)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-#add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -21,6 +21,7 @@ roslint_cpp()
 set(AUTONOMY_OBJECTS
   src/tslam.cpp
   src/roulette.cpp
+  src/object_describer.cpp
 )
 
 catkin_package(INCLUDE_DIRS include)
