--- a/darknet_ros/darknet_ros/config/yolov3-tiny_RoboSub18.yaml
+++ b/darknet_ros/darknet_ros/config/yolov3-tiny_RoboSub18.yaml
@@ -3,7 +3,7 @@ yolo_model:
   config_file:
     name: yolov3-tiny_RoboSub18.cfg
   weight_file:
-    name: yolov3-tiny_RoboSub18_110000.weights
+    name: yolov3-tiny_RoboSub18_80000.weights
   threshold:
     value: 0.1 # Leave small b/c the yolo_processor will handle thresholding
   detection_classes:
@@ -16,3 +16,6 @@ yolo_model:
       - Dice6
       - Path_Marker
       - Roulette
+      - Buy_Gold_Chip
+      - Slots_Fruit
+      - Slots_Big_Red
