--- a/riptide_controllers/cfg/controller_properties_alignment.yaml
+++ b/riptide_controllers/cfg/controller_properties_alignment.yaml
@@ -1,3 +1,6 @@
-max_x_error: 50 # [pixels]
-max_y_error: 50 # [pixels]
-max_z_error: 50 # [pixels]
+max_x_error: 100 # [pixels]
+max_y_error: 100 # [pixels]
+max_z_error: 100 # [pixels]
+max_bbox_accel_error: 50 # [pixels]
+max_bbox_depth_error: 50 # [picels]
+max_zero_detect_duration: 0.5 # [s]
