Initial commit of slots task code. Barebones version, not compiled.

--- a/riptide_autonomy/CMakeLists.txt
+++ b/riptide_autonomy/CMakeLists.txt
@@ -24,6 +24,7 @@ set(AUTONOMY_OBJECTS
   src/roulette.cpp
   src/object_describer.cpp
   src/casino_gate.cpp
+  src/task_slots.cpp
 )
 
 catkin_package(INCLUDE_DIRS include)
