Gold Chip task logic complete. Builds.

--- a/riptide_autonomy/cfg/tasks.yaml
+++ b/riptide_autonomy/cfg/tasks.yaml
@@ -59,9 +59,9 @@ tasks: [
       search_depth: 3,
       search_accel: 0.8,
       objects: ["Slots_Fruit", "Slots_Big_Red"],
-      torpedo_offset: { 
-        port: { y: 100, z: 0 }, 
-        stbd: { y: -100, z: 0 } 
+      torpedo_offset: {
+        port: { y: 100, z: 0 },
+        stbd: { y: -100, z: 0 }
       },
       bbox_dim: 300,
       bbox_control: 0,
@@ -78,6 +78,8 @@ tasks: [
       plane: 0,
       search_depth: 3,
       search_accel: 0.8,
+      burn_time: 2.5,
+      back_off_time: 2.5,
       objects: ["Buy_Gold_Chip"],
       thresholds: [0.5],
       align_thresh: 30, # [pixels]
