Added parameters to tasks.yaml file

--- a/riptide_autonomy/cfg/task_execution.yaml
+++ b/riptide_autonomy/cfg/task_execution.yaml
@@ -9,6 +9,6 @@ Controller_Thresholds:
   roll_thresh: 5 # [deg]
   pitch_thresh: 5 # [deg]
   yaw_thresh: 5 # [deg]
-  error_duration_thresh: 3 # [s]
-  bbox_surge_duration_thresh: 1 # [s]
-  bbox_heave_duration_thresh: 1 # [s]
+  error_duration: 3 # [s]
+  bbox_surge_duration: 1 # [s]
+  bbox_heave_duration: 1 # [s]
