FInished initial dice code

--- a/riptide_autonomy/cfg/tasks.yaml
+++ b/riptide_autonomy/cfg/tasks.yaml
@@ -38,10 +38,12 @@ tasks: [
       search_depth: 3,
       search_accel: 0.8,
       bump_duration: 4, # [s]
+      backup_duration: 6, # [s]
+      move_over_duration: 1, # [s]
       dice_bbox_width: 0.25, # fraction of frame width
-      upper_dice_zcenter_offset: 0.25,
+      upper_dice_zcenter_offset: 0.25, # fraction of frame height
       objects: ["Dice1", "Dice2", "Dice5", "Dice6"],
-      preferred_objects: ["Dice6", "Dice5"],
+      preferred_objects: [6, 5], # Just use actual dice block number
       thresholds: [0.6, 0.6, 0.6, 0.6],
       align_thresh: 30, # [pixels]
       bbox_thresh: 30, # [pixels]
