Revised roulette code, fixed quadrant calculation, new PID values

--- a/riptide_autonomy/cfg/task_map_semis.yaml
+++ b/riptide_autonomy/cfg/task_map_semis.yaml
@@ -57,10 +57,10 @@ task_map: {
     {
       id: 6,
       name: "Roulette",
-      start_x: [2, 2, 2, 2],
+      start_x: [0, 0, 0, 0], # D (30, 20)
       start_y: [2, 2, 2, 2],
-      end_x: [1, 1, 1, 1],
-      end_y: [1, 1, 1, 1]
+      end_x: [1, 1, 1, 0], # D (30, 20)
+      end_y: [1, 1, 1, 2]
     },
     {
       id: 7,
