--- a/riptide_autonomy/cfg/task_map_semis.yaml
+++ b/riptide_autonomy/cfg/task_map_semis.yaml
@@ -42,7 +42,7 @@ task_map: {
       id: 4,
       name: "Slots",
       start_x: [0, 10, 10, 2],
-      start_y: [-1, 10, 10, 0],
+      start_y: [-1, 10, 10, 0], # D (2, 2)
       end_x: [0, 10, 10, 10],
       end_y: [0, 10, 10, 10]
     },
